# bevy_sample_stg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yaml
data/barrage/: aim_triple.xml  boss1_first_wave.xml  boss1_second_wave.xml  circle.xml  none.xml  triple.xml
data/stage/: enemy.csv
src/: app_state.rs  destroy_enemy.rs  ending.rs  enemy.rs  enemy_life_counter.rs  enemy_shot.rs  game_frame_count.rs  game_over.rs  in_game.rs  lib.rs  life_count.rs  main.rs  menu.rs  play_area_descriptor.rs  player.rs  player_shot.rs  scoreboard.rs
src/enemy/: barrage.rs  emerge.rs  life_count.rs  move_pattern.rs  movement.rs  system_label.rs
src/enemy/barrage/: bullet.rs  bulletml_runner.rs  configuration.rs  plugin.rs
src/enemy/move_pattern/: down_stay_left_bottom.rs  down_stay_right_bottom.rs  down_stay_up.rs  fast_down_left.rs  fast_down_right.rs  left_bottom.rs  right_bottom.rs
src/enemy/movement/: move_pattern.rs
src/enemy/movement/move_pattern/: down_stay_left_bottom.rs  down_stay_right_bottom.rs  down_stay_up.rs  fast_down_right.rs
src/in_game/: destroy_enemy.rs  enemy.rs  game_frame.rs  life_count.rs  play_area.rs  player.rs  player_shot.rs  player_stock.rs  scoreboard.rs  system_label.rs
src/in_game/enemy/: assets_holder.rs  barrage.rs  boss.rs  emerge.rs  life_count.rs  movement.rs  normal.rs  system_label.rs
src/in_game/enemy/barrage/: barrage_starter.rs  bullet.rs  bulletml_runner.rs  configuration.rs  plugin.rs
src/in_game/enemy/boss/: emerge.rs  movement.rs
src/play_area/: play_area_descriptor.rs
(+13 files in other folders)
