[package]
edition = "2021"
name = "bevy_sample_stg"
version = "0.1.0"

[lib]
name = "bevy_sample_stg"
path = "src/lib.rs"

[[bin]]
name = "bevy_sample_stg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bevy = {version = "0.6.0", features = ["dynamic"]}
bevy_bulletml = "0.2.1"
csv = "1.1"
rand = "0.8"
